samples/_failures_safe/1761471605_c9b200_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85d34151.c: In function ‘main’:
./samples/SAFE/__tmp_85d34151.c:170:5: error: expected declaration or statement at end of input
  170 |     }
      |     ^
